# acton-dx

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  PHASE-2-PLAN.md  README.md  RELEASE-VERIFICATION.md  WEEK-12-COMPLETE.md  docker-compose.yml
acton-dx/: Cargo.toml
acton-dx-proto/: Cargo.toml  build.rs
acton-dx-proto/proto/: auth.proto  cache.proto  cedar.proto  data.proto  email.proto  file.proto
acton-dx-proto/src/: lib.rs
acton-dx/benches/: agents_benchmark.rs
acton-dx/src/cli/htmx/: mod.rs  project_template_manager.rs
acton-dx/src/htmx/: mod.rs
acton-dx/src/htmx/agents/: csrf_manager.rs  hot_reload.rs  mod.rs  rate_limiter.rs  service_coordinator.rs  session_manager.rs
acton-dx/src/htmx/auth/: session.rs
acton-dx/src/htmx/clients/: auth.rs  cache.rs  cedar.rs  data.rs  email.rs  error.rs  file.rs  ipc.rs  mod.rs  registry.rs  transport.rs
acton-dx/src/htmx/config/: mod.rs
acton-dx/src/htmx/email/: error.rs  mod.rs
acton-dx/src/htmx/embedded/: mod.rs
acton-dx/src/htmx/extractors/: csrf.rs
acton-dx/src/htmx/handlers/: job_admin.rs
acton-dx/src/htmx/middleware/: csrf.rs  helpers.rs  mod.rs  session.rs
acton-dx/src/htmx/oauth2/: agent.rs  handlers.rs
acton-dx/src/htmx/state/: mod.rs
acton-dx/src/htmx/storage/: microservices.rs  mod.rs  scanning.rs
acton-dx/src/htmx/testing/: agents.rs
acton-dx/tests/: agents_integration.rs  oauth2_integration.rs
acton-htmx/: Cargo.toml
acton-htmx-cli/: Cargo.toml
acton-htmx-cli/src/: lib.rs  main.rs
acton-htmx-cli/src/commands/: generate.rs  jobs.rs  scaffold.rs
acton-htmx-cli/src/scaffold/: generator.rs  templates.rs
acton-htmx-cli/src/templates/: deployment.rs  files.rs  jobs.rs  mod.rs
acton-htmx/examples/: forms_demo.rs  htmx_patterns.rs  htmx_templates.rs  simple_htmx.rs
acton-htmx/src/: lib.rs
acton-htmx/src/agents/: csrf_manager.rs  mod.rs  request_reply.rs  session_manager.rs
acton-htmx/src/auth/: extractors.rs  mod.rs  session.rs
acton-htmx/src/config/: mod.rs
acton-htmx/src/email/: job.rs  mod.rs  sender.rs  testing.rs
acton-htmx/src/extractors/: csrf.rs  file_upload.rs  mod.rs  session.rs
acton-htmx/src/forms/: template_render.rs
acton-htmx/src/handlers/: job_admin.rs
acton-htmx/src/htmx/: swap_oob.rs
acton-htmx/src/jobs/: job.rs  mod.rs  observability.rs
acton-htmx/src/middleware/: auth.rs  cedar.rs  csrf.rs  file_serving.rs  mod.rs  session.rs
acton-htmx/src/oauth2/: handlers.rs
acton-htmx/src/state/: mod.rs
acton-htmx/src/storage/: local.rs  mod.rs  scanning.rs  traits.rs
acton-htmx/src/template/: helpers.rs  mod.rs  registry.rs
acton-htmx/tests/: htmx_extractors.rs  htmx_responders.rs
docker/: Dockerfile.service
docs/: README.md
docs/examples/: blog-crud.md
docs/guides/: 00-getting-started.md  01-htmx-responses.md  02-templates.md  03-authentication.md  04-forms.md  05-deployment.md  06-file-uploads.md  08-systemd-deployment.md  09-email.md  09-reverse-proxy.md  10-ssl-setup.md  11-monitoring.md  12-production-checklist.md  13-troubleshooting.md  14-microservices-architecture.md
services/auth-service/: Cargo.toml
services/auth-service/config/: default.toml
services/auth-service/src/: config.rs  lib.rs  main.rs
services/auth-service/src/agents/: mod.rs  session_manager.rs
services/auth-service/src/services/: csrf.rs  mod.rs  password.rs  session.rs
services/cache-service/: Cargo.toml
services/cache-service/config/: default.toml
services/cache-service/src/: config.rs  lib.rs  main.rs
services/cedar-service/: Cargo.toml
services/cedar-service/config/: default.toml
services/cedar-service/policies/: default.cedar
services/cedar-service/src/: config.rs  lib.rs  main.rs
services/cedar-service/src/services/: cedar.rs  mod.rs
services/data-service/: Cargo.toml
services/data-service/config/: default.toml
services/data-service/src/: config.rs  lib.rs  main.rs
services/data-service/src/services/: data.rs  mod.rs
services/email-service/: Cargo.toml
services/email-service/config/: default.toml
services/email-service/src/: config.rs  lib.rs  main.rs
services/email-service/src/services/: email.rs  mod.rs
services/file-service/: Cargo.toml
services/file-service/config/: default.toml
services/file-service/src/: config.rs  lib.rs  main.rs
services/file-service/src/services/: file.rs  mod.rs
templates/project/postgres/: Cargo.toml.hbs
templates/project/sqlite/: Cargo.toml.hbs
templates/scaffold/: README.md  _row.html.hbs  _rows.html.hbs  form.html.hbs  form.rs.hbs  handler.rs.hbs  list.html.hbs  migration.sql.hbs  model.rs.hbs  show.html.hbs  test.rs.hbs
(+36 files in other folders)
