[package]
name = "cedar-service"
version = "0.1.0"
edition = "2021"
rust-version = "1.83.0"
description = "Cedar authorization service for Acton DX"
license = "MIT"

[lints]
workspace = true

[dependencies]
acton-dx-proto = { path = "../../acton-dx-proto" }
tokio = { workspace = true }
tonic = "0.13"
prost = "0.13"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
