[package]
name = "cedar-service"
version = "0.1.0"
edition = "2021"
rust-version = "1.83.0"
description = "Cedar authorization service for Acton DX"
license = "MIT"

[lints]
workspace = true

[dependencies]
acton-dx-proto = { path = "../../acton-dx-proto" }
tokio = { workspace = true }
tonic = "0.13"
prost = "0.13"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = { workspace = true }
cedar-policy = "4"
figment = { version = "0.10", features = ["toml", "env"] }
parking_lot = "0.12"

[dev-dependencies]

[[bin]]
name = "cedar-service"
path = "src/main.rs"
