[package]
name = "data-service"
version = "0.1.0"
edition = "2021"
rust-version = "1.83.0"
description = "Database abstraction service for Acton DX"
license = "MIT"

[lints]
workspace = true

[dependencies]
acton-dx-proto = { path = "../../acton-dx-proto" }
tokio = { workspace = true }
tonic = "0.13"
prost = "0.13"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = { workspace = true }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite", "postgres", "migrate"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
figment = { version = "0.10", features = ["toml", "env"] }
dashmap = "6"

[[bin]]
name = "data-service"
path = "src/main.rs"
