[package]
name = "email-service"
version = "0.1.0"
edition = "2021"
rust-version = "1.83.0"
description = "Email sending service for Acton DX"
license = "MIT"

[lints]
workspace = true

[dependencies]
acton-dx-proto = { path = "../../acton-dx-proto" }
tokio = { workspace = true }
tonic = "0.13"
prost = "0.13"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = { workspace = true }
figment = { version = "0.10", features = ["toml", "env"] }
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder"] }
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]

[[bin]]
name = "email-service"
path = "src/main.rs"
