[package]
name = "file-service"
version = "0.1.0"
edition = "2021"
rust-version = "1.83.0"
description = "File storage service for Acton DX"
license = "MIT"

[lints]
workspace = true

[dependencies]
acton-dx-proto = { path = "../../acton-dx-proto" }
tokio = { workspace = true }
tokio-stream = "0.1"
tonic = "0.13"
prost = "0.13"
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = { workspace = true }
figment = { version = "0.10", features = ["toml", "env"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
async-stream = "0.3"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "file-service"
path = "src/main.rs"
